@@ -23,6 +23,7 @@
   * 6, sect17: foot note "sect17-1-foot" is not referenced, and, so, not rendered
   * 6, sect98: foot note "sect98-1-foot" is not referenced, and, so, not rendered
   * 6, sect98: "4 Flechas for 1 Corona" should be "4 Flechas por 1 Corona"
+- FAQ: Questions about "I cannot write on the Action Chart"
 
 FOR FUTURE (1.11+):
 - Book 9, sect189: We should keep the count of the different currencies (Lunes, Gold Crows,...). Also on:
